cluster/apps/commafeed/commafeed-networking.yaml
# cluster/apps/commafeed/commafeed-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
  namespace: media-stack
spec:
  selector:
    app: commafeed
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: commafeed
  namespace: media-stack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rss.homelab.local`) # Dominio para Commafeed
      kind: Rule
      services:
        - name: commafeed
          port: 8082
